Tests. Fetch servers from api

--- a/partycli/partycli.csproj
+++ b/partycli/partycli.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Services\Display\" />
+      <Folder Include="Services\ui\" />
     </ItemGroup>
 
 </Project>
